API/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: internal-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: internal-api
  template:
    metadata:
      labels:
        app: internal-api
    spec:
      containers:
      - name: api-container
        image: my-web-api:v1
        imagePullPolicy: Never # Tell K8s to use your local image
        ports:
        - containerPort: 9000
