API/api-manifest.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: procurement-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: procurement-api
  template:
    metadata:
      labels:
        app: procurement-api
    spec:
      containers:
        - name: procurement-api
          image: myramadhani/procurement-api:v1-vps-cloud
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: procurement-api-service
spec:
  type: NodePort
  selector:
    app: procurement-api
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30080
