API/service.yml
apiVersion: v1
kind: Service
metadata:
  name: internal-api-service
spec:
  type: NodePort
  selector:
    app: internal-api
  ports:
    - protocol: TCP
      port: 8080      # Port you call from Postman
      targetPort: 9000 # Port the container is listening on
      nodePort: 30001
