API/ingress-manifest.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: procurement-api-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.procurement-app.my.id
      secretName: procurement-api-tls
  rules:
    - host: api.procurement-app.my.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: procurement-api-service
                port:
                  number: 8080
